forgetting factor for player parameter updates gw-by-gw

--- a/models/player_model.ipynb
+++ b/models/player_model.ipynb
@@ -429,20 +429,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_goals_simplex(prior_a, prior_b, goals_perc, games):\n",
-    "    return(prior_a + (goals_perc * games), prior_b + games - (goals_perc * games))\n",
+    "def update_goals_simplex(prior_a, prior_b, goals_perc, games, ff=1):\n",
+    "    return((prior_a * ff) + (goals_perc * games), (prior_b * ff) + games - (goals_perc * games))\n",
     "\n",
-    "def update_assists_simplex(prior_a, prior_b, assists_perc, games):\n",
-    "    return(prior_a + (assists_perc * games), prior_b + games - (assists_perc * games))\n",
+    "def update_assists_simplex(prior_a, prior_b, assists_perc, games, ff=1):\n",
+    "    return((prior_a * ff) + (assists_perc * games), (prior_b * ff) + games - (assists_perc * games))\n",
     "\n",
-    "def update_goals_and_assists_simplex(prior_a, prior_b, prior_c, goals, assists, total_goals):\n",
-    "    return(prior_a + goals, prior_b + assists, prior_c + (total_goals - (assists + goals)))\n",
+    "def update_goals_and_assists_simplex(prior_a, prior_b, prior_c, goals, assists, total_goals, ff=1):\n",
+    "    return((prior_a * ff) + goals, (prior_b * ff) + assists, (prior_c * ff) + (total_goals - (assists + goals)))\n",
     "\n",
-    "def update_mins_simplex(prior_a, prior_b, mins_per_season, games_played):\n",
-    "    return(prior_a + mins_per_season, prior_b + games_played)\n",
+    "def update_mins_simplex(prior_a, prior_b, mins_per_season, games_played, ff=1):\n",
+    "    return((prior_a * ff) + mins_per_season, (prior_b * ff) + games_played)\n",
     "\n",
-    "def update_games_played_simplex(prior_a, prior_b, games_played, games_not_played):\n",
-    "    return(prior_a + games_played, prior_b + games_not_played)"
+    "def update_games_played_simplex(prior_a, prior_b, games_played, games_not_played, ff=1):\n",
+    "    return((prior_a * ff) + games_played, (prior_b * f) + games_not_played)"
    ]
   },
   {
@@ -2421,6 +2421,7 @@
    "source": [
     "game_week_data = \"gw_test.csv\"  # change every week\n",
     "current_season = 4\n",
+    "ff = 0.9  # forgetting factor\n",
     "raw_data_for_this_season = \"../data/players_raw_20182019.csv\"  # doesnt change from week to week - but best to update the file everyweek"
    ]
   },
@@ -2532,13 +2533,13 @@
     "    post_a_goals, post_b_goals, post_c_goals = update_goals_and_assists_simplex(all_players_parameters.loc[all_players_parameters.index[new_ind], 'a_goals'],\n",
     "                                                                                all_players_parameters.loc[all_players_parameters.index[new_ind], 'b_goals'],\n",
     "                                                                                all_players_parameters.loc[all_players_parameters.index[new_ind], 'c_goals'],\n",
-    "                                                                                goa, assi, tgoa)\n",
+    "                                                                                goa, assi, tgoa, ff)\n",
     "    post_a_mins, post_b_mins = update_mins_simplex(all_players_parameters.loc[all_players_parameters.index[new_ind], 'a_mins'],\n",
     "                                                   all_players_parameters.loc[all_players_parameters.index[new_ind], 'b_mins'],\n",
-    "                                                   mns, gms)\n",
+    "                                                   mns, gms, ff)\n",
     "    post_a_played, post_b_played = update_games_played_simplex(all_players_parameters.loc[all_players_parameters.index[new_ind], 'a_games'],\n",
     "                                                   all_players_parameters.loc[all_players_parameters.index[new_ind], 'b_games'],\n",
-    "                                                   gms, 1 - gms)\n",
+    "                                                   gms, 1 - gms, ff)\n",
     "\n",
     "    all_players_parameters.loc[all_players_parameters.index[new_ind], 'a_goals'] = post_a_goals\n",
     "    all_players_parameters.loc[all_players_parameters.index[new_ind], 'b_goals'] = post_b_goals\n",
